--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,7 +33,7 @@ jobs:
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
 
       - name: Cargo fmt
-        run: cargo fmt --all -- --check
+        run: cargo fmt --all --check
 
       - name: Debug build
         run: cargo build --verbose
